--- a/lukesookyloo.html
+++ b/lukesookyloo.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Click to Reveal QR</title>
+
+  <!-- Preload QR code for instant switch -->
+  <link rel="preload" href="your-qr-code.png" as="image">
+
   <style>
     body {
       margin: 0;
@@ -20,6 +24,11 @@
       position: relative;
       width: 300px;
       height: 300px;
+      transition: transform 0.4s ease;
+    }
+
+    .container:hover {
+      transform: scale(1.05);
     }
 
     img {
@@ -27,7 +36,8 @@
       height: 100%;
       border-radius: 50%;
       display: block;
-      transition: opacity 0.3s ease;
+      transition: opacity 0.4s ease;
+      opacity: 1;
     }
 
     .rotating-text {
@@ -38,6 +48,7 @@
       height: 300px;
       transform: translate(-50%, -50%);
       pointer-events: none;
+      animation: rotate 10s linear infinite;
     }
 
     .rotating-text span {
@@ -48,42 +59,34 @@
       white-space: nowrap;
       color: white;
       font-family: sans-serif;
-      font-size: 1rem;
+      font-size: calc(10px + 0.5vw);
+      text-shadow: 0 0 6px rgba(255, 255, 255, 0.7);
     }
 
     @keyframes rotate {
-      from {
-        transform: rotate(0deg);
-      }
-      to {
-        transform: rotate(360deg);
-      }
-    }
-
-    .rotating-text {
-      animation: rotate 10s linear infinite;
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
     }
   </style>
 </head>
 <body>
   <div class="container" onclick="swapImage()">
     <img id="displayImage" src="your-image.jpg" alt="Click to reveal QR" />
-    <div id="textRing" class="rotating-text">
-      <!-- Text broken into characters and rotated -->
-      <!-- Example: "Click the image to reveal QR" -->
-    </div>
+    <div id="textRing" class="rotating-text"></div>
   </div>
 
   <script>
     const image = document.getElementById('displayImage');
     const textRing = document.getElementById('textRing');
+    let showingQR = false;
 
-    // Text to display in a circle
-    const message = " Luke's Looky Loo Luke's Looky Loo ";
-    const radius = 130; // radius of the circle
+    // Text that circles around
+    const message = " Click to Reveal QR • Luke's Looky Loo • ";
+    const radius = 130; // radius of text circle
     const characters = message.split('');
     const angleStep = 360 / characters.length;
 
+    // Build rotating circular text
     characters.forEach((char, i) => {
       const span = document.createElement('span');
       span.innerText = char;
@@ -92,9 +95,20 @@
       textRing.appendChild(span);
     });
 
+    // Smooth image toggle
     function swapImage() {
-      image.src = "your-qr-code.png";
-      textRing.style.display = "none"; // hide rotating text after click
+      image.style.opacity = 0;
+      setTimeout(() => {
+        if (!showingQR) {
+          image.src = "your-qr-code.png";
+          textRing.style.display = "none";
+        } else {
+          image.src = "your-image.jpg";
+          textRing.style.display = "block";
+        }
+        showingQR = !showingQR;
+        image.style.opacity = 1;
+      }, 300);
     }
   </script>
 </body>
